# cmd2ai

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEBUG_TOOLS.md  LICENSE  Makefile  README.md  ai-widget.zsh  ask-websearch.zsh  config.example.json  config.example.yaml  migrate_config.sh
samples/mcp-servers/: README.md  gemini-wrapper.py
samples/mcp-servers/bash-mcp/: README.md  server.ts  test.sh
scripts/: ask
src/: cli.rs  config.rs  error.rs  highlight.rs  lib.rs  main.rs  models.rs  orchestrator.rs  search.rs  session.rs
src/api/: client.rs  mod.rs  models.rs  response.rs  streaming.rs
src/config/: api.rs  defaults.rs  mod.rs  reasoning.rs  tools.rs  validation.rs
src/local_tools/: dynamic.rs  executor.rs  mod.rs  paths.rs  registry.rs  tools.rs
src/local_tools/builtins/: mod.rs  read_file.rs
src/mcp/: client.rs  mod.rs  tools.rs  transport_sse.rs  types.rs
src/models/: mod.rs  reasoning.rs  session.rs  tool.rs
src/session/: filesystem.rs  mod.rs  storage.rs
src/ui/: mod.rs  output.rs
tests/: api_response.rs  local_tools_template.rs  session_store.rs  tools.rs
