[package]
name = "cmd2ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
colored = "2.1"
syntect = "5.2"
chrono = "0.4"
bytes = "1.9"
