[package]
name = "cmd2ai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai"
path = "src/main.rs"

[[bin]]
name = "check-raw"
path = "src/bin/check_raw.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
colored = "2.1"
syntect = "5.2"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
